# EvoEvo

./: README.md
aevol-5.0-beta6/: Makefile.in  aclocal.m4  configure
aevol-5.0-beta6/doc/: Makefile.in
aevol-5.0-beta6/src/: Makefile.in
aevol-5.0-beta6/src/libaevol/: Makefile.in
aevol-5.0-beta6/src/libaevol/SFMT-src-1.4/: Makefile.in
aevol-5.0-beta6/src/post_treatments/: Makefile.in
release-0.15.0/: AUTHORS  CMakeLists.txt  INSTALL  LICENSE  PACKAGE  README  VERSION
release-0.15.0/cmake/: cmake_clean.sh  cmake_debug.sh  cmake_no_graphics.sh  cmake_release.sh
release-0.15.0/doc/: parameters_description.html
release-0.15.0/doc/getting started/: getting started.aux  getting started.ist  getting started.out  getting started.tex  getting started.toc
release-0.15.0/example/: parameters.txt
release-0.15.0/src/: bootstrap.cpp  create.cpp  generate_figures.cpp  get_deepest_tree.cpp  integrated_tests.cpp  recover_parameters.cpp  run.cpp  trophic_groups_history.cpp  unitary_tests.cpp
release-0.15.0/src/SL_post_treatments/: SL_black_queen.cpp  SL_create_competition_experiment.cpp  SL_cross_feeding.cpp  SL_frequency_dependence.cpp  SL_heatmap.cpp  SL_phylogenetic_diversity.cpp  SL_run_competition_experiment.cpp
release-0.15.0/src/lib/: Cell.cpp  Cell.h  Enums.h  Environment.cpp  Environment.h  Genome.cpp  Genome.h  GraphicDisplay.cpp  GraphicDisplay.h  InheritedProteins.cpp  InheritedProteins.h  IntegratedTests.cpp  IntegratedTests.h  Macros.h  MutationEvent.cpp  MutationEvent.h  MutationVector.cpp  MutationVector.h  Node.cpp  Node.h  ODE.cpp  ODE.h  Parameters.cpp  Parameters.h  Population.cpp  Population.h  Prng.cpp  Prng.h  ReplicationReport.cpp  ReplicationReport.h  Simulation.cpp  Simulation.h  SpeciesList.cpp  SpeciesList.h  Statistics.cpp  Statistics.h  Structs.h  Tree.cpp  Tree.h  TrophicGroup.cpp  (+5 more)
release-0.15.0/src/lib/scripts/: best_lineage_to_js.py  change_package_version.py  compress_trophic_groups_file.py  environment_map.py  environment_to_js.py  genome_to_js.py  inherited_proteins_to_js.py  networks_to_js.py  plot_best_genome_structure.R  plot_best_phenotype.R  plot_phylogenetic_tree.R  plot_phylogenetic_tree_with_trophic_group.R  plot_phylogenetic_tree_with_trophic_level.R  statistics_to_js.py  test_equality_operator.py  track_cell.py  trophic_groups_to_js.py  trophic_network_to_js.py
release-0.15.0/src/lib/scripts/viewer/: viewer.html
release-0.15.0/src/lib/scripts/viewer/src/pages/: best_evolution.html  best_lineage.html  environment_evolution.html  last_best_individual.html  parameters.html  parameters_description.html  phylogeny.html  population_evolution.html
